Update IdeasControllerTest